separated files for SA

--- a/GPU/Makefile
+++ b/GPU/Makefile
@@ -11,14 +11,14 @@ CUBLAS_PATH=-L$(CUDA_PREFIX)/lib64
 
 all: kmeans_gpu run
 
-kmeans_util.o: kmeans_util.cu
-	$(GPU_COMP) $(CUDA_FLAGS) -c kmeans_util.cu $(GPU_FLAGS)
+kmeans_util.o: kmeans_util_sa.cu
+	$(GPU_COMP) $(CUDA_FLAGS) $(GPU_FLAGS) -c kmeans_util_sa.cu -o kmeans_util.o 
 
 gpu_util.o: gpu_util.cu
 	$(GPU_COMP) $(CUDA_FLAGS) -c gpu_util.cu $(GPU_FLAGS)
 
-kmeans_gpu: gpu_util.o kmeans_util.o kmeans_gpu_not_atomic.cu
-	$(GPU_COMP) $(CUDA_FLAGS) -c kmeans_gpu_not_atomic.cu -o kmeans_gpu.o
+kmeans_gpu: gpu_util.o kmeans_util.o kmeans_gpu_not_atomic_sa.cu
+	$(GPU_COMP) $(CUDA_FLAGS) -c kmeans_gpu_not_atomic_sa.cu -o kmeans_gpu.o
 	$(GPU_COMP) $(CUDA_FLAGS) kmeans_gpu.o gpu_util.o kmeans_util.o -o kmeans_gpu $(CUBLAS_PATH) $(CUBLAS)
 
 check_architectures: check_architecture.cu
